# fund-data-daily-fetch

./: .gitignore  README.md  pyproject.toml
cdk/: cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
cdk/lib/: fund-data-fetch-stack.ts
docs/: QUERYING.md  slack-mengxin-fund-history.md
lambda/: Dockerfile
lambda/a-share-fetcher/: Dockerfile  handler.py  requirements.txt
lambda/backfill-runner/: Dockerfile  backfill_fund_history.py  entrypoint.sh  requirements.txt
lambda/catalog-generator/: Dockerfile  handler.py  requirements.txt
lambda/cn-index-fetcher/: Dockerfile  handler.py
lambda/cn-macro-fetcher/: Dockerfile  handler.py
lambda/data-processor/: Dockerfile  handler.py
lambda/export-fund-history/: Dockerfile  handler.py
lambda/fund-fetcher/: Dockerfile  handler.py  requirements.txt
lambda/fund-history-fetcher/: Dockerfile  handler.py  requirements.txt
lambda/hist-kline-fetcher/: Dockerfile  handler.py  requirements.txt
lambda/hk-stock-fetcher/: Dockerfile  handler.py
lambda/iceberg-maintenance/: Dockerfile  handler.py  requirements.txt
lambda/src/: handler.py
lambda/us-stock-fetcher/: Dockerfile  handler.py  requirements.txt
scripts/: backfill_fund_history.py  backfill_fund_history_local.sh  backfill_to_iceberg.py  deploy.sh  destroy.sh  iceberg_init_tables.py  run_backfill_fargate.sh
tests/: conftest.py  test_backfill_s3_checkpoint.py  test_base_fetcher_dualwrite.py  test_iceberg_maintenance.py  test_iceberg_writer.py  test_normalizers.py  test_schemas_registry.py
tests/fixtures/: jjjl_710001.html  (+1 more)
(+47 files in other folders)
