[project]
name = "fund-data-daily-fetch"
version = "0.1.0"
description = "Fund data daily fetch with Iceberg lakehouse"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "moto[s3,glue]>=5.0",
    "pyiceberg[glue]>=0.7.0",
    "pyarrow>=14.0",
    "pandas>=2.0",
    "boto3>=1.34",
]

[tool.pytest.ini_options]
pythonpath = ["lambda", "."]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]
